# ecs

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: ecsConfig.cmake.in
examples/: CMakeLists.txt  physics.cpp
include/ecs/: Component.h  ComponentContainer.h  ComponentId.h  ComponentSparseSet.h  ComponentType.h  Entity.h  EntityContainer.h  EntityManager.h  EntitySet.h  EntitySetIterator.h  EntitySetType.h  SparseSet.h  System.h  Visitor.h  hash.h
tests/: CMakeLists.txt  tests.cpp
